fix: Add back missing margin for paragraphs in booking providers

--- a/assets/sass/content.scss
+++ b/assets/sass/content.scss
@@ -87,7 +87,6 @@ p:has(+ span) {
   margin-bottom: 0;
 }
 
-article p:last-child,
-section p:last-child {
+.o-single__content > *:last-child {
   margin-bottom: 0;
 }
